@@ -423,7 +423,9 @@ name, date, heure, gamestate, position, name perso, name server, versions
 - [ ] Should create RenderSystem_GL.dll from Ogre3D
       Need OpenGL for minwg32
 - [ ] Should provide GNU gettext for win32
-**** TODO Miscelaneous                                                [64%]
+**** TODO Miscelaneous                                                [78%]
+     CLOCK: [2011-12-27 mar. 18:35]--[2011-12-27 mar. 19:06] =>  0:31
+     CLOCK: [2011-12-26 lun. 20:47]--[2011-12-26 lun. 21:00] =>  0:13
      CLOCK: [2011-12-26 lun. 20:31]--[2011-12-26 lun. 20:43] =>  0:12
      CLOCK: [2011-12-16 ven. 10:50]--[2011-12-16 ven. 11:18] =>  0:28
      CLOCK: [2011-12-12 lun. 22:53]--[2011-12-12 lun. 23:18] =>  0:25
@@ -446,10 +448,10 @@ name, date, heure, gamestate, position, name perso, name server, versions
       Makefiles from the repository (see `svn status`)
 - [X] Remove IrrClient (2,218 SLOC) and explain it in regtests.
 - [X] Remove tools/xident (3,082 SLOC) and explain it in regtests.
-- [ ] Trying to fix Doxygen documentation TODO items.
+- [X] CANCELED Trying to fix Doxygen documentation TODO items.
 - [ ] Trying to fix configure script warnings
       See the 'freetype-config: integer expression expected' warning
-- [ ] Must change LauncherOptions icons
+- [X] CANCELED Must change LauncherOptions icons
 - [ ] May remove interdepencies ogreGui/Maincore 
       and correct wiki:BuildingFromSources
 - [ ] Should remove unused datafiles
