@@ -115,7 +115,9 @@ A system that serialize widgets position and configuration
    FT is the ROADMAP file time (C-c C-x C-d)
 
 * v0.0.5-214 (02 dec 2011 - ???) SLOC ??? UT ??? FT ??:??
-- (8) Moved tools/xident to ../OLD/
+- (9) Fix some configure warnings
+   Using AM_GNU_GETTEXT_VERSION, m4: RB_CHECK_LIBFOX integer warning
+- Moved tools/xident to ../OLD/
 - Moved IrrClient/ to ../OLD/
 - svn ignores Makefile from multiples directories
 - Edited svn:ignore for multiples directories
