@@ -1053,7 +1053,7 @@ S["build_os"]="linux-gnu"
 S["build_vendor"]="pc"
 S["build_cpu"]="i686"
 S["build"]="i686-pc-linux-gnu"
-S["ISODATE"]="2011-12-26"
+S["ISODATE"]="2011-12-27"
 S["TAPI_LIBRARY_VERSION"]="1:1:0"
 S["OGREGUI_LIBRARY_VERSION"]="2:0:0"
 S["DESIGN_LIBRARY_VERSION"]="1:0:0"
